resolving comments from Alfonso

--- a/www/translations/en.json
+++ b/www/translations/en.json
@@ -1,6 +1,5 @@
 {
-  "home":{
-    "hello_world": "Hello, World!",
+  "navbar":{
     "sign_up": "Sign in / Sign up",
     "sign_out": "Sign Out",
     "profile": "Profile"
